tests/correctness/resources/tests/error-high-1.scala
package test

import ildl._

object Test {
  // @high not used inside a TransformationDescription object:
  val hi: Int @high = 2
}
